Adding animation and timers

--- a/public/index.html
+++ b/public/index.html
@@ -1,13 +1,13 @@
 <html>
   <head>
-    <title>GDS Performance</title>
+    <title>Sprint 15</title>
     <link rel="stylesheet" href="css/application.css">
   </head>
   <body>
 
-    <div id="controls">
+    <!--<div id="controls">
       <a href="#">Next slide</a>
-    </div>
+    </div>-->
 
     <div class="item logo active">
       <img src="images/sprint-logo-v3.svg">
