Add slide content, inc images

--- a/public/index.html
+++ b/public/index.html
@@ -5,32 +5,155 @@
   </head>
   <body>
 
-    <!--<div id="controls">
+    <div id="controls">
       <a href="#">Next slide</a>
-    </div>-->
+    </div>
 
-    <div class="item logo active">
+    <div class="item logo previous">
       <img src="images/sprint-logo-v3.svg">
     </div>
 
-    <div class="item tester">
-      Tester #1
+    <div class="item c6 active">
+      <div class="icon">
+        <img src="images/1-carers.svg" id="icon-1">
+      </div>
+      <div class="text">
+        <div class="main">
+          71% of Carer’s Allowance applications made online
+        </div>
+        <div class="meta">
+          www.gov.uk/carers-allowance
+          DWP
+        </div>
+      </div>
     </div>
 
-    <div class="item tester">
-      Tester #2
+    <div class="item c5">
+      <div class="icon">
+        <img src="images/2-self-assessment.svg" id="icon-2">
+      </div>
+      <div class="text">
+        <div class="main">
+          Digital Self Assessment
+          1 million users
+        </div>
+        <div class="meta">
+          www.gov.uk/transformation/self-assessment
+          HMRC
+        </div>
+      </div>
     </div>
 
-    <div class="item tester">
-      Tester #3
+    <div class="item c4">
+      <div class="icon">
+        <img src="images/3-patent-renewals.svg" id="icon-3">
+      </div>
+      <div class="text">
+        <div class="main">
+          Renew a patent online
+          94% digital take-up
+        </div>
+        <div class="meta">
+          www.gov.uk/renew-patent
+          BIS
+        </div>
+      </div>
     </div>
 
-    <div class="item tester">
-      Tester #4
+    <div class="item c3">
+      <div class="icon">
+        <img src="images/4-carers.svg" id="icon-4">
+      </div>
+      <div class="text">
+        <div class="main">
+          Carer’s Allowance
+          49% of questions removed from the application
+        </div>
+        <div class="meta">
+          www.gov.uk/carers-allowance
+          DWP
+        </div>
+      </div>
     </div>
 
-    <div class="item tester">
-      Tester #5
+    <div class="item c2">
+      <div class="icon">
+        <img src="images/5-lpa.svg" id="icon-5">
+      </div>
+      <div class="text">
+        <div class="main">
+          Lasting Power of Attorney
+          90% user satisfaction
+        </div>
+        <div class="meta">
+          www.gov.uk/power-of-attorney/make-lasting-power
+          MOJ
+        </div>
+      </div>
+    </div>
+
+    <div class="item c1">
+      <div class="icon">
+        <img src="images/6-tax-account.svg" id="icon-6">
+      </div>
+      <div class="text">
+        <div class="main">
+          Your tax account
+          1.5 million users
+        </div>
+        <div class="meta">
+          www.gov.uk/transformation/business-tax-account
+          HMRC
+        </div>
+      </div>
+    </div>
+
+    <div class="item c6">
+      <div class="icon">
+        <img src="images/7-digital-academy.svg" id="icon-7">
+      </div>
+      <div class="text">
+        <div class="main">
+          100 students through
+          DWP Digital Academy
+        </div>
+        <div class="meta">
+          dwpdigital.blog.gov.uk
+          DWP
+        </div>
+      </div>
+    </div>
+
+    <div class="item c5">
+      <div class="icon">
+        <img src="images/8-student-finance.svg" id="icon-8">
+      </div>
+      <div class="text">
+        <div class="main">
+          Apply online for student finance
+          1 million online applications
+          (academic year 2014/15)
+        </div>
+        <div class="meta">
+          www.gov.uk/apply-online-for-student-finance
+          BIS
+        </div>
+      </div>
+    </div>
+
+    <div class="item c4">
+      <div class="icon">
+        <img src="images/9-verify.svg" id="icon-9">
+      </div>
+      <div class="text">
+        <div class="main">
+          GOV.UK Verify
+          20,000 sign-ins
+        </div>
+        <div class="meta">
+          www.gov.uk/verify
+        </div>
+      </div>
     </div>
 
     <script type="text/javascript" src="/bower_components/jquery/dist/jquery.min.js"></script>
