More bits and pieces, starting to get it together

--- a/public/index.html
+++ b/public/index.html
@@ -19,11 +19,12 @@
       </div>
       <div class="text">
         <div class="main">
-          71% of Carer’s Allowance applications made online
+          <span class="shout">71%</span> of Carer’s Allowance<br>
+          applications made online
         </div>
         <div class="meta">
           www.gov.uk/carers-allowance
-          DWP
+          <img src="images/logo-dwp.svg" class="logo-dwp">
         </div>
       </div>
     </div>
@@ -34,12 +35,12 @@
       </div>
       <div class="text">
         <div class="main">
-          Digital Self Assessment
-          1 million users
+          Digital Self Assessment<br>
+          <span class="shout">1 million users</span>
         </div>
         <div class="meta">
           www.gov.uk/transformation/self-assessment
-          HMRC
+          <img src="images/logo-hmrc.svg" class="logo-hmrc">
         </div>
       </div>
     </div>
@@ -50,12 +51,12 @@
       </div>
       <div class="text">
         <div class="main">
-          Renew a patent online
-          94% digital take-up
+          Renew a patent online<br>
+          <span class="shout">94%</span> digital take-up
         </div>
         <div class="meta">
           www.gov.uk/renew-patent
-          BIS
+          <img src="images/logo-bis.svg" class="logo-bis">
         </div>
       </div>
     </div>
@@ -66,12 +67,13 @@
       </div>
       <div class="text">
         <div class="main">
-          Carer’s Allowance
-          49% of questions removed from the application
+          Carer’s Allowance<br>
+          <span class="shout">49%</span> of questions removed<br>
+          from the application
         </div>
         <div class="meta">
           www.gov.uk/carers-allowance
-          DWP
+          <img src="images/logo-dwp.svg" class="logo-dwp">
         </div>
       </div>
     </div>
@@ -82,12 +84,12 @@
       </div>
       <div class="text">
         <div class="main">
-          Lasting Power of Attorney
-          90% user satisfaction
+          Lasting Power of Attorney<br>
+          <span class="shout">90%</span> user satisfaction
         </div>
         <div class="meta">
           www.gov.uk/power-of-attorney/make-lasting-power
-          MOJ
+          <img src="images/logo-moj.svg" class="logo-moj">
         </div>
       </div>
     </div>
@@ -98,12 +100,12 @@
       </div>
       <div class="text">
         <div class="main">
-          Your tax account
-          1.5 million users
+          Your tax account<br>
+          <span class="shout">1.5 million users</span>
         </div>
         <div class="meta">
           www.gov.uk/transformation/business-tax-account
-          HMRC
+          <img src="images/logo-hmrc.svg" class="logo-hmrc">
         </div>
       </div>
     </div>
@@ -114,12 +116,12 @@
       </div>
       <div class="text">
         <div class="main">
-          100 students through
+          <span class="shout">100</span> students through<br>
           DWP Digital Academy
         </div>
         <div class="meta">
           dwpdigital.blog.gov.uk
-          DWP
+          <img src="images/logo-dwp.svg" class="logo-dwp">
         </div>
       </div>
     </div>
@@ -130,13 +132,13 @@
       </div>
       <div class="text">
         <div class="main">
-          Apply online for student finance
-          1 million online applications
+          Apply online for student finance<br>
+          <span class="shout">1 million</span> online applications<br>
           (academic year 2014/15)
         </div>
         <div class="meta">
           www.gov.uk/apply-online-for-student-finance
-          BIS
+          <img src="images/logo-bis.svg" class="logo-bis">
         </div>
       </div>
     </div>
@@ -147,8 +149,8 @@
       </div>
       <div class="text">
         <div class="main">
-          GOV.UK Verify
-          20,000 sign-ins
+          GOV.UK Verify<br>
+          <span class="shout">20,000 sign-ins</span>
         </div>
         <div class="meta">
           www.gov.uk/verify
