Update quotes in Carers, generate offline

--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,7 @@
       </div>
       <div class="text">
         <div class="main">
-          <span class="shout">71%</span> of Carer’s Allowance<br>
+          <span class="shout">71%</span> of Carer&rsquo;s Allowance<br>
           applications made online
         </div>
         <div class="meta">
@@ -69,7 +69,7 @@
       </div>
       <div class="text">
         <div class="main">
-          Carer’s Allowance<br>
+          Carer&rsquo;s Allowance<br>
           <span class="shout">49%</span> of questions removed<br>
           from the application
         </div>
