--- a/public/index.html
+++ b/public/index.html
@@ -88,7 +88,7 @@
       </div>
       <div class="text">
         <div class="main">
-          Lasting Power of Attorney<br>
+          Lasting power of attorney<br>
           <span class="shout">90%</span> user satisfaction
         </div>
         <div class="meta">
