Build offline version for Sprint 15

--- a/public/offline-version.html
+++ b/public/offline-version.html
@@ -213,7 +213,7 @@ img {
       </div>
       <div class="text">
         <div class="main">
-          Lasting Power of Attorney<br>
+          Lasting power of attorney<br>
           <span class="shout">90%</span> user satisfaction
         </div>
         <div class="meta">
